src/test/resources/parse/accept/keywordInIdentifier.ul
int aintreturn ()
{
}

int interesting ()
{
}

int returning ()
{
}
