src/test/resources/parse/reject/emptyIfStatementExpressionWithElse.ul
int bar ()
{
    int id1;

    if () {
        id1 = "hello";
    } else {
        ;
    }
}
